--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## Getting data\n",
     "\n",
-    "We'll use the MovieLens 100k dataset, which contains 100,000 ratings from 1000 users on 1700 movies. The ratings are on a scale from 1 to 5, and have been collected over several years. The dataset is available from GroupLens, a research lab at the University of Minnesota. The dataset is also available on Kaggle.\n",
+    "We'll use the MovieLens 100k dataset, which contains 100,000 ratings from 1000 users on 1700 movies. The ratings are on a scale from 1 to 5, and have been collected over several years. The dataset is available on [GroupLens](https://grouplens.org/datasets/movielens/100k/).\n",
     "\n",
     "Before executing the code in this notebook, you'll need to download the dataset and unzip it. You can do this by running the following commands:\n",
     "\n",
