--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1067efc10>"
+       "<torch._C.Generator at 0x10443dbd0>"
       ]
      },
      "execution_count": 7,
@@ -935,6 +935,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](../images/vanilla_mf.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This model is a simple matrix factorization model. We'll use the `nn.Embedding` layer to learn the latent factors for users and items.\n",
     "\n",
     "Where loss function is the mean squared error, and optimizer is Adam.\n",
@@ -1116,6 +1123,28 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nutorbit/Library/Caches/pypoetry/virtualenvs/collaborative-filtering-baseline-VTPPmAaj-py3.8/lib/python3.8/site-packages/torch/onnx/symbolic_opset11.py:774: UserWarning: This model contains a squeeze operation on dimension 1. The size of this dimension in the given input is 7. The model will be exported without the squeeze node. If the model is intended to be used with dynamic input shapes, please export with dynamic_axes argument.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# export computational graph\n",
+    "input_names = ['User_id', 'Item_id']\n",
+    "output_names = ['Score']\n",
+    "\n",
+    "torch.onnx.export(model, (user_ids, item_ids), 'tmp/vanilla_mf.onnx', input_names=input_names, output_names=output_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1343,7 @@
        "9        4.4  4.7  6.4  4.2  3.2  4.6  3.2  4.8  6.1  5.4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1554,7 @@
        "9        4.5  5.0  5.0  3.0  3.0  5.0  3.5  5.0  4.5  5.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1575,7 @@
        "array([7, 2, 8, 1, 5])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
