--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10443dbd0>"
+       "<torch._C.Generator at 0x104285bd0>"
       ]
      },
      "execution_count": 7,
@@ -988,31 +988,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Iter: 0, Loss: 24.8049, Eval Loss: 24.7765\n",
-      "Epoch: 20, Iter: 0, Loss: 22.0311, Eval Loss: 23.8884\n",
-      "Epoch: 40, Iter: 0, Loss: 19.5266, Eval Loss: 23.0828\n",
-      "Epoch: 60, Iter: 0, Loss: 17.2088, Eval Loss: 22.2253\n",
-      "Epoch: 80, Iter: 0, Loss: 15.0367, Eval Loss: 21.2778\n",
-      "Epoch: 100, Iter: 0, Loss: 12.9978, Eval Loss: 20.2324\n",
-      "Epoch: 120, Iter: 0, Loss: 11.0990, Eval Loss: 19.0841\n",
-      "Epoch: 140, Iter: 0, Loss: 9.3577, Eval Loss: 17.8468\n",
-      "Epoch: 160, Iter: 0, Loss: 7.7929, Eval Loss: 16.5516\n",
-      "Epoch: 180, Iter: 0, Loss: 6.4174, Eval Loss: 15.2413\n",
-      "Epoch: 200, Iter: 0, Loss: 5.2350, Eval Loss: 13.9666\n",
-      "Epoch: 220, Iter: 0, Loss: 4.2392, Eval Loss: 12.7763\n",
-      "Epoch: 240, Iter: 0, Loss: 3.4159, Eval Loss: 11.7070\n",
-      "Epoch: 260, Iter: 0, Loss: 2.7463, Eval Loss: 10.7787\n",
-      "Epoch: 280, Iter: 0, Loss: 2.2090, Eval Loss: 9.9964\n",
-      "Epoch: 300, Iter: 0, Loss: 1.7828, Eval Loss: 9.3536\n",
-      "Epoch: 320, Iter: 0, Loss: 1.4478, Eval Loss: 8.8364\n",
-      "Epoch: 340, Iter: 0, Loss: 1.1861, Eval Loss: 8.4270\n",
-      "Epoch: 360, Iter: 0, Loss: 0.9825, Eval Loss: 8.1066\n",
-      "Epoch: 380, Iter: 0, Loss: 0.8240, Eval Loss: 7.8570\n",
-      "Epoch: 400, Iter: 0, Loss: 0.7003, Eval Loss: 7.6625\n",
-      "Epoch: 420, Iter: 0, Loss: 0.6030, Eval Loss: 7.5100\n",
-      "Epoch: 440, Iter: 0, Loss: 0.5257, Eval Loss: 7.3895\n",
-      "Epoch: 460, Iter: 0, Loss: 0.4637, Eval Loss: 7.2932\n",
-      "Epoch: 480, Iter: 0, Loss: 0.4132, Eval Loss: 7.2155\n"
+      "Epoch: 0, Loss: 24.8049, Eval Loss: 24.7765\n",
+      "Epoch: 20, Loss: 22.0311, Eval Loss: 23.8884\n",
+      "Epoch: 40, Loss: 19.5266, Eval Loss: 23.0828\n",
+      "Epoch: 60, Loss: 17.2088, Eval Loss: 22.2253\n",
+      "Epoch: 80, Loss: 15.0367, Eval Loss: 21.2778\n",
+      "Epoch: 100, Loss: 12.9978, Eval Loss: 20.2324\n",
+      "Epoch: 120, Loss: 11.0990, Eval Loss: 19.0841\n",
+      "Epoch: 140, Loss: 9.3577, Eval Loss: 17.8468\n",
+      "Epoch: 160, Loss: 7.7929, Eval Loss: 16.5516\n",
+      "Epoch: 180, Loss: 6.4174, Eval Loss: 15.2413\n",
+      "Epoch: 200, Loss: 5.2350, Eval Loss: 13.9666\n",
+      "Epoch: 220, Loss: 4.2392, Eval Loss: 12.7763\n",
+      "Epoch: 240, Loss: 3.4159, Eval Loss: 11.7070\n",
+      "Epoch: 260, Loss: 2.7463, Eval Loss: 10.7787\n",
+      "Epoch: 280, Loss: 2.2090, Eval Loss: 9.9964\n",
+      "Epoch: 300, Loss: 1.7828, Eval Loss: 9.3536\n",
+      "Epoch: 320, Loss: 1.4478, Eval Loss: 8.8364\n",
+      "Epoch: 340, Loss: 1.1861, Eval Loss: 8.4270\n",
+      "Epoch: 360, Loss: 0.9825, Eval Loss: 8.1066\n",
+      "Epoch: 380, Loss: 0.8240, Eval Loss: 7.8570\n",
+      "Epoch: 400, Loss: 0.7003, Eval Loss: 7.6625\n",
+      "Epoch: 420, Loss: 0.6030, Eval Loss: 7.5100\n",
+      "Epoch: 440, Loss: 0.5257, Eval Loss: 7.3895\n",
+      "Epoch: 460, Loss: 0.4637, Eval Loss: 7.2932\n",
+      "Epoch: 480, Loss: 0.4132, Eval Loss: 7.2155\n"
      ]
     }
    ],
@@ -1055,7 +1055,7 @@
     "        eval_loss_hist.append(eval_loss.item())\n",
     "        \n",
     "    if epoch % 20 == 0:\n",
-    "        print(f\"Epoch: {epoch}, Iter: {i}, Loss: {loss.item():.4f}, Eval Loss: {eval_loss.item():.4f}\")"
+    "        print(f\"Epoch: {epoch}, Loss: {loss.item():.4f}, Eval Loss: {eval_loss.item():.4f}\")"
    ]
   },
   {
