add regularized mf

--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x104285bd0>"
+       "<torch._C.Generator at 0x106f24bf0>"
       ]
      },
      "execution_count": 7,
@@ -1031,7 +1031,7 @@
     "        opt.zero_grad()\n",
     "        \n",
     "        pred_scores = model(user_ids, item_ids)\n",
-    "        loss = VanillaMF.loss_fn(pred_scores, ratings)\n",
+    "        loss = model.loss_fn(pred_scores, ratings)\n",
     "        \n",
     "        loss.backward()\n",
     "        opt.step()\n",
@@ -1047,7 +1047,7 @@
     "                ratings = ratings.to(device)\n",
     "                \n",
     "                pred_scores = model(user_ids, item_ids)\n",
-    "                eval_loss += VanillaMF.loss_fn(pred_scores, ratings)\n",
+    "                eval_loss += model.loss_fn(pred_scores, ratings)\n",
     "                \n",
     "            eval_loss /= len(test_loader)\n",
     "        \n",
@@ -1124,22 +1124,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nutorbit/Library/Caches/pypoetry/virtualenvs/collaborative-filtering-baseline-VTPPmAaj-py3.8/lib/python3.8/site-packages/torch/onnx/symbolic_opset11.py:774: UserWarning: This model contains a squeeze operation on dimension 1. The size of this dimension in the given input is 7. The model will be exported without the squeeze node. If the model is intended to be used with dynamic input shapes, please export with dynamic_axes argument.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export computational graph\n",
-    "input_names = ['User_id', 'Item_id']\n",
-    "output_names = ['Score']\n",
+    "# input_names = ['User_id', 'Item_id']\n",
+    "# output_names = ['Score']\n",
     "\n",
-    "torch.onnx.export(model, (user_ids, item_ids), 'tmp/vanilla_mf.onnx', input_names=input_names, output_names=output_names)"
+    "# torch.onnx.export(model, (user_ids, item_ids), 'tmp/vanilla_mf.onnx', input_names=input_names, output_names=output_names)"
    ]
   },
   {
