--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x106f24bf0>"
+       "<torch._C.Generator at 0x106aa4bf0>"
       ]
      },
      "execution_count": 7,
@@ -980,8 +980,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using trainer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from cf_baseline.trainer import MFTrainer\n",
+    "\n",
+    "\n",
+    "# trainer = MFTrainer(\n",
+    "#     model=model, \n",
+    "#     optimizer=opt, \n",
+    "#     loss_fn=model.loss_fn,\n",
+    "#     device=device\n",
+    "# )\n",
+    "\n",
+    "# training_loss_list, validation_loss_list = trainer.fit(\n",
+    "#     train_loader=train_loader,\n",
+    "#     val_loader=test_loader,\n",
+    "#     epochs=N_EPOCH,\n",
+    "#     verbose=50\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Manual training loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1372,7 @@
        "9        4.4  4.7  6.4  4.2  3.2  4.6  3.2  4.8  6.1  5.4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1583,7 @@
        "9        4.5  5.0  5.0  3.0  3.0  5.0  3.5  5.0  4.5  5.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1604,7 @@
        "array([7, 2, 8, 1, 5])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
