--- a/notebooks/01_dressipi_mf.ipynb
+++ b/notebooks/01_dressipi_mf.ipynb
@@ -31,9 +31,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from itertools import product\n",
-    "from cf_baseline.algos import VanillaMF\n",
+    "from rec_baseline.algos import VanillaMF\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from cf_baseline.common import get_device\n",
+    "from rec_baseline.common import get_device\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
