--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -30,9 +30,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from itertools import product\n",
-    "from cf_baseline.algos import VanillaMF\n",
+    "from rec_baseline.algos import VanillaMF\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from cf_baseline.common import get_device\n",
+    "from rec_baseline.common import get_device\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x106aa4bf0>"
+       "<torch._C.Generator at 0x10a956e50>"
       ]
      },
      "execution_count": 7,
@@ -992,7 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from cf_baseline.trainer import MFTrainer\n",
+    "# from rec_baseline.trainer import MFTrainer\n",
     "\n",
     "\n",
     "# trainer = MFTrainer(\n",
