--- a/notebooks/00_movielens_mf.ipynb
+++ b/notebooks/00_movielens_mf.ipynb
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10a956e50>"
+       "<torch._C.Generator at 0x110080e50>"
       ]
      },
      "execution_count": 7,
@@ -1002,7 +1002,7 @@
     "#     device=device\n",
     "# )\n",
     "\n",
-    "# training_loss_list, validation_loss_list = trainer.fit(\n",
+    "# hist = trainer.fit(\n",
     "#     train_loader=train_loader,\n",
     "#     val_loader=test_loader,\n",
     "#     epochs=N_EPOCH,\n",
