--- a/notebooks/04_dressipi_bert4rec.ipynb
+++ b/notebooks/04_dressipi_bert4rec.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix factorization for dressipi dataset tutorial\n",
+    "# BERT4Rec for dressipi dataset tutorial\n",
     "\n",
     "[Dressipi](https://dressipi.com/) is the UK's leading fashion discovery platform. It is a fashion recommendation engine that helps users discover new fashion items based on their preferences. \n",
     "In this notebook, we will use the dressipi dataset to build a baseline model using matrix factorization."
