--- a/notebooks/04_dressipi_bert4rec.ipynb
+++ b/notebooks/04_dressipi_bert4rec.ipynb
@@ -8,7 +8,7 @@
     "# BERT4Rec for dressipi dataset tutorial\n",
     "\n",
     "[Dressipi](https://dressipi.com/) is the UK's leading fashion discovery platform. It is a fashion recommendation engine that helps users discover new fashion items based on their preferences. \n",
-    "In this notebook, we will use the dressipi dataset to build a baseline model using matrix factorization."
+    "In this notebook, we will use the dressipi dataset to build a baseline model using BERT4Rec."
    ]
   },
   {
